# vit-scope

./: .gitignore  AGENTS.md  LICENSE  README.md  SIGLIP_MODELS.md  TEST_RESULTS.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py  types.py
backend/app/api/: routes.py
backend/app/engine/: __init__.py  base.py  siglip_engine.py
backend/app/plugins/: __init__.py  base.py  cosine_tokens.py  registry.py  token_norm.py
backend/app/state/: __init__.py  cache.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_cache.py  test_engine.py  test_plugins.py  test_siglip_models.py  test_text_embedding.py  test_token_norm_plugin.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Colorbar.css  Colorbar.tsx  ImageDropzone.css  ImageDropzone.tsx  LayerSlider.css  LayerSlider.tsx  ModelSelector.css  ModelSelector.tsx  PatchGrid.css  PatchGrid.tsx  PluginSidebar.css  PluginSidebar.tsx
